# BRepNet

./: .gitignore  Dockerfile  MANIFEST.in  __init__.py  environment.yml  pyproject.toml
eval/: evaluate_folder.py
seg/: __init__.py  dom.py  editor.py  threejs_viewer.py
seg/static/css/: global.css
seg/static/js/: main.js
seg/static/js/editor/: Command.js  Config.js  Editor.js  History.js  Loader.js  Signal.js
seg/static/js/editor/commands/: AddObjectCommand.js  AddScriptCommand.js  MoveObjectCommand.js  MultiCmdsCommand.js  RemoveObjectCommand.js  RemoveScriptCommand.js  SetColorCommand.js  SetGeometryCommand.js  SetGeometryValueCommand.js  SetMaterialColorCommand.js  SetMaterialCommand.js  SetMaterialMapCommand.js  SetMaterialRangeCommand.js  SetMaterialValueCommand.js  SetMaterialVectorCommand.js  SetPositionCommand.js  SetRotationCommand.js  SetScaleCommand.js  SetSceneCommand.js  SetScriptValueCommand.js  SetUuidCommand.js  SetValueCommand.js  UpdateObjectCommand.js  index.js
seg/static/js/utils/: functions.js  object.js  three.js  url.js
seg/tests/: test_graceful_shutdown.py
