[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brepnet"
version = "0.1.0"
description = "BRepNet: A Topological Message Passing System for Solid Models"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Autodesk AI Lab" }
]
keywords = ["BRep", "CAD", "geometry", "deep-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Note: heavy runtime deps (torch, occwl, pythonocc) are expected to be provided by the conda env.
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "notebooks*"]
